# VibeSDR-CarFM

./: .gitignore  AGENTS.md  APPSTORE-EXCEPTION.md  App.tsx  BRIEF-airband-geo-frequencies-v2.md  BRIEF-bookmark-import-formats.md  BRIEF-deep-linking-uri-scheme.md  BRIEF-fmdx-backend-adapter.md  BRIEF-repeaters.md  BRIEF-sdr-uri-scheme.md  BRIEF-spyserver-and-network-performance.md  BRIEF-spyserver-backend-adapter.md  BUGFIX-vibeserver-squelch-indication.md  CHANGELOG.md  PRIVACY.md  README.md  app.json  eas.json  metro.config.js  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
Reference/: VibeSDR_LocalSDR_Brief.md  VibeSDR_v4_LocalSDR_Plan_Fable.md  VibeSDR_v5_Clean_DSP_Brief.md
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  local_sdr_shim.cpp  local_sdr_shim.h  mdns_responder.cpp  net_shim.cpp  net_shim.h  rtl_sdr_stub.h  rtl_tcp_server.cpp  rtl_tcp_server.h  vibe_localsdr_jni.cpp  vibe_si470x_rds_jni.cpp  vibe_web_page.h
android/app/src/main/cpp/decoders/: audio_nr.cpp  audio_nr.h  auto_notch.cpp  auto_notch.h  fsk_decoder.cpp  fsk_decoder.h  ft8_decoder.cpp  ft8_decoder.h  sstv_decoder.cpp  sstv_decoder.h  wefax_decoder.cpp  wefax_decoder.h
android/app/src/main/cpp/decoders/morse/: CwDecoder.cpp  CwDecoder.h
android/app/src/main/cpp/decoders/morse/ggmorse/src/: ggmorse.cpp
android/app/src/main/cpp/patches/: 0001-backend-ALooper_pollOnce-ndk27.patch
android/app/src/main/cpp/sdr-kit/arm64-v8a/lib/: libzstd.so.1.5.2
android/app/src/main/cpp/sdr-kit/armeabi-v7a/include/: rtl-sdr.h
android/app/src/main/cpp/sdr-kit/armeabi-v7a/lib/: libzstd.so.1.5.2
android/app/src/main/cpp/spyserver/: PROTOCOL_NOTES.md  spyserver_client.cpp  spyserver_client.h  spyserver_messages.cpp  spyserver_messages.h  spyserver_protocol.h
android/app/src/main/cpp/vibedsp/: ddc.cpp  fft.cpp  pipeline.cpp  rds.cpp  resampler.cpp  simd_internal.h  stereo.cpp  vibedsp.h
android/app/src/main/cpp/vibedsp/test/: CMakeLists.txt  fm_probe  fm_probe.cpp  test_adjacent.cpp  test_cfft.cpp  test_demod.cpp  test_fft.cpp  test_passband.cpp  test_pipeline.cpp  test_rds.cpp  test_rds_dsp.cpp  test_rds_replay.cpp
android/app/src/main/jni/: CMakeLists.txt
assets/db/: stations.sqlite
contrib/owrx-dab-speed-fix/: README.md
contrib/owrx-dab-speed-fix/proper-fix/: README.md
contrib/owrx-status-active-profile/: README.md  status-active-profile.patch
docs/: BUILTIN-TUNER-FINDINGS.md  CARFM-STRIP-PLAN.md  STORE-SUBMISSION.md  TESTFLIGHT.md
docs/backend/: nearby-stations-api.md
docs/design/: README.md  SPEC-AUDIT-HANDOFF.md  carfm-face-brief.md  handoff-logo-search.md  settings-panel-handoff.md
docs/design/handoff/: ANDROID-IMPLEMENTATION.md  CLAUDE.md  VERSION  (+13 more)
files/: BRIEF-vibesdr-jr-feasibility.md  BRIEF-vibeserver-macos.md  BRIEF-vibeserver-protocol-foundations.md  BRIEF-watch-fixes.md  BRIEFS-INDEX-2026-07-13.md
ios/: ExportOptions-appstore.plist  ExportOptions.plist  Podfile  Podfile.properties.json
ios/VibeSDR/: AppDelegate.swift  FmdxMp3Decoder.swift  Info.plist  PrivacyInfo.xcprivacy  VibePowerModule.m  VibePowerModule.swift  VibeWatchModule.m  VibeWatchModule.swift
ios/VibeSDR.xcodeproj/: project.pbxproj
ios/VibeSDR.xcworkspace/: contents.xcworkspacedata
ios/VibeSDRWatch/: AircraftView.swift  ContentView.swift  ControlMenu.swift  DabView.swift  FmdxView.swift  Info.plist  NumpadView.swift  VibeSDRWatchApp.swift  WatchLink.swift  WaterfallBuffer.swift
ios/ci_scripts/: ci_post_clone.sh
modules/vibe-local-sdr/: VibeLocalSDR.mm  VibeLocalSDR.podspec  build_ios.sh
patches/: expo-modules-jsi+57.0.0.patch
scripts/: build-web.mjs  mock-vibeserver.mjs  test-web-client.mjs  test_imaAdpcm.ts  vs-proxy.mjs
spike/nwd-tuner-probe/: README.md  settings.gradle
src/assets/: countryAbbr.ts  fontsCSS.ts  leafletCSS.ts  leafletJS.ts  signalProcessor.ts  skinHtml.ts
src/components/: AboutOverlay.tsx  AircraftPanel.tsx  AudioPlayer.tsx  AudioSheet.tsx  BrowserOverlay.tsx  CarFmFace.tsx  CenterVfoButton.tsx  ChatDrawer.tsx  CityPickerModal.tsx  Coachmark.tsx  ControlsBar.tsx  CrashBoundary.tsx  DecoderImageCanvas.tsx  DecoderPanel.tsx  DrumWheel.tsx  FmdxDial.tsx  FreqModal.tsx  GainSlider.tsx  LocalAudioPlayer.tsx  LocalHardwarePanel.tsx  MapOverlay.tsx  MenuSheet.tsx  ModeSelector.tsx  PasswordModal.tsx  ProfilePicker.tsx  RecordingsOverlay.tsx  SectionIcon.tsx  SignalMeter.tsx  SpecRatioOverlay.tsx  StationLogo.tsx  StepPicker.tsx  UsbSdrIcon.tsx  VTSBar.tsx  VTSDisplay.tsx  VfoLockIcon.tsx  WaterfallView.tsx  WaterfallWebView.tsx
src/constants/: bandPlan.ts  theme.ts  version.ts
src/hooks/: useFeatureDetection.ts  useSDRBridge.ts  useUiScale.ts
src/linking/: DeepLinkHandler.ts  SdrLinkHandler.ts  deepLinkState.ts  useDeepLinks.ts
src/screens/: InstancePickerScreen.tsx  RtlTcpServerScreen.tsx  SDRScreen.tsx  ServerModeScreen.tsx  TunerScreen.tsx  ViewPickerScreen.tsx  WebViewerScreen.tsx
src/services/: DecoderClient.ts  FmdxAdapter.ts  KiwiAdapter.ts  OwrxAdapter.ts  SDRBackend.ts  UberSDRAdapter.ts  UberSDRClient.ts  base64.ts  callsignCountry.ts  carMode.ts  crashGuard.ts  dataModes.ts  defaultInstance.ts  diag.ts  directories.ts  eibi.ts  favourites.ts  fmdxDirectory.ts  gps.ts  gpsSession.ts  grid.ts  imaAdpcm.ts  instancesApi.ts  localSession.ts  logoDuckDuckGo.ts  logoRadioDns.ts  logoResolver.ts  logoSiteFavicon.ts  logoWikidata.ts  mdns.ts  motion.ts  nowPlaying.ts  nwdRadio.ts  piCallsign.ts  ptyLabels.ts  radioBrowser.ts  rdsCountry.ts  rtlTcpServer.ts  sdrTypes.ts  si470xTuner.ts  (+14 more)
tools/build_station_db/: .gitignore  README.md  build_station_db.py  logo_search.py  logo_search_gui.py  station_explorer.py
tools/pi-bench/: bench.cpp  build.sh
tools/spyserver/: centretest.py  probe.py  ratecheck.py  ss_proxy.py  test_messages.cpp
tools/station_explorer/: README.md  station_explorer.py
tools/tests/: logo.test.ts  nowPlaying.test.ts  piCallsign.test.ts  stationGeo.test.ts
web/: UberSDR_Pocket_v116.html  vibesdr_web_client_base_v6_3_1.html
web/client/: index.html
(+100 files in other folders)
